--- a/la-mia-pizzeria-razor-layout.csproj
+++ b/la-mia-pizzeria-razor-layout.csproj
@@ -5,8 +5,12 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>la_mia_pizzeria_static</RootNamespace>
+    <UserSecretsId>1b6cd2ed-579d-4a4a-a1c1-e092270837ab</UserSecretsId>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.29" />
+  </ItemGroup>
 </Project>
