--- a/la-mia-pizzeria-razor-layout.csproj
+++ b/la-mia-pizzeria-razor-layout.csproj
@@ -13,4 +13,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.29" />
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="Views\Pages\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Views\Pages\" />
+  </ItemGroup>
 </Project>
